[package]
name = "advent_of_code"
version = "0.9.2"
authors = [
    "Nick Davies <github@nicolasdavies.com.au>",
    "Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"
]
edition = "2021"
default-run = "advent_of_code"
publish = false

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
pico-args = "0.5.0"
