[package]
name = "aoc_solutions"
version = "0.10.0"
authors = [
    "Nick Davies <github@nicolasdavies.com.au>",
]
edition = "2021"
default-run = "aoc_solutions"
publish = false

[dependencies]
advent-of-code = { git = "https://github.com/nickdavies/advent-of-code.git" }
anyhow = "1.0.75"
aoc-lib = { git = "https://github.com/nickdavies/aoc-lib.git" }
itertools = "0.12.0"
maplit = "1.0.2"
nom = "7.1.3"
num-bigint = "0.4.4"
num-traits = "0.2.17"
petgraph = "0.6.4"
pico-args = "0.5.0"
